<resources>
    <string name="app_name">Forester</string>
    <string name="title_activity_map">Map</string>

    <string name="createUser">Create new user</string>
    <string name="login">Login</string>
    <string name="serialNumber">Serial number</string>
    <string name="name">Name</string>
    <string name="lastName">Last name</string>
    <string name="save">Save</string>
    <string name="abort">Abort</string>

    <string name="addPointOfInterest">Add point of interest</string>
    <string name="addSector">Add sector</string>

    <string name="geocoding">Geocoding</string>
    <string name="loading">Loading. Please wait&#8230;</string>
    <string name="createUserFail">Fail to create user!</string>
    <string name="gpsAccessDenied">GPS access denied!</string>
    <string name="poiCreateSuccess">Point of interest creation OK!</string>
    <string name="poiCreateError">Point of interest creation failed!</string>
    <string name="polygonCreateSuccess">Polygon creation OK!</string>
    <string name="polygonCreateError">Polygon creation failed!</string>
    <string name="streetAddressGeocodingError">Street address geocoding error!</string>
    <string name="createSuccess">User created!</string>
    <string name="serial_not_found">Serial not found!</string>
    <string name="cannot_init_database">Cannot initialize database!</string>
    <string name="currentPosition">Current position</string>
    <string name="gpsNotAvailable">GPS not available</string>
    <string name="pointOfInterest">Point of interest</string>
    <string name="latlng">latlng(%1$f, %2$f)</string>
</resources>
